Bug 1145809 - Add the reading mode footer. ui-r=mmaslaney, r=Unfocused
UltraBlame original commit: e0854136b830439844bc8dea24e6f02d9095f07a

--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -70,15 +70,8 @@ width
 660px
 ;
 margin
--
-left
 :
-auto
-;
-margin
--
-right
-:
+0
 auto
 ;
 }
@@ -164,6 +157,14 @@ f0ece7
 sans
 -
 serif
+.
+sans
+-
+serif
+.
+remove
+-
+button
 {
 font
 -
@@ -182,6 +183,12 @@ serif
 }
 .
 serif
+.
+serif
+.
+remove
+-
+button
 {
 font
 -
@@ -1052,11 +1059,11 @@ height
 ;
 top
 :
-0px
+0
 ;
 left
 :
-0px
+0
 ;
 margin
 :
@@ -1077,7 +1084,7 @@ background
 color
 :
 #
-FBFBFB
+fbfbfb
 ;
 -
 moz
@@ -1095,25 +1102,15 @@ right
 1px
 solid
 #
-B5B5B5
+b5b5b5
 ;
 }
 .
 button
 {
-color
-:
-white
-;
 display
 :
 block
-;
-background
--
-position
-:
-center
 ;
 background
 -
@@ -1130,19 +1127,40 @@ no
 -
 repeat
 ;
-background
--
-color
-:
-transparent
-;
 height
 :
 40px
 ;
+padding
+:
+0
+;
+}
+.
+toolbar
+.
+button
+{
+color
+:
+white
+;
 width
 :
 40px
+;
+background
+-
+position
+:
+center
+;
+background
+-
+color
+:
+#
+fbfbfb
 ;
 border
 -
@@ -1170,10 +1188,6 @@ bottom
 solid
 #
 c1c1c1
-;
-padding
-:
-0
 ;
 }
 .
@@ -1204,11 +1218,11 @@ none
 ;
 margin
 :
-0px
+0
 ;
 padding
 :
-0px
+0
 ;
 }
 .
@@ -1217,11 +1231,11 @@ li
 {
 margin
 :
-0px
+0
 ;
 padding
 :
-0px
+0
 ;
 }
 /
@@ -1291,7 +1305,7 @@ background
 color
 :
 #
-FBFBFB
+fbfbfb
 ;
 visibility
 :
@@ -1311,13 +1325,13 @@ border
 1px
 solid
 #
-B5B5B5
+b5b5b5
 ;
 box
 -
 shadow
 :
-0px
+0
 1px
 12px
 #
@@ -1338,11 +1352,11 @@ width
 ;
 height
 :
-0px
+0
 ;
 border
 :
-0px
+0
 ;
 border
 -
@@ -1351,7 +1365,7 @@ top
 1px
 solid
 #
-B5B5B5
+b5b5b5
 ;
 margin
 :
@@ -1605,7 +1619,7 @@ left
 1px
 solid
 #
-B5B5B5
+b5b5b5
 ;
 border
 -
@@ -1723,7 +1737,7 @@ border
 -
 left
 :
-0px
+0
 ;
 }
 #
@@ -1804,7 +1818,7 @@ inset
 0
 0
 #
-FC6420
+fc6420
 ;
 }
 #
@@ -1860,7 +1874,7 @@ background
 color
 :
 #
-EBEBEB
+ebebeb
 ;
 }
 .
@@ -1897,7 +1911,7 @@ background
 color
 :
 #
-DADADA
+dadada
 ;
 }
 /
@@ -1985,6 +1999,185 @@ background
 position
 :
 center
+;
+}
+.
+footer
+{
+height
+:
+64px
+;
+background
+-
+color
+:
+#
+ebebeb
+;
+position
+:
+absolute
+;
+left
+:
+0
+;
+width
+:
+100
+%
+;
+text
+-
+align
+:
+center
+;
+padding
+:
+12px
+0
+;
+box
+-
+sizing
+:
+border
+-
+box
+;
+box
+-
+shadow
+:
+0
+9px
+9px
+-
+9px
+#
+c1c1c1
+inset
+;
+}
+.
+sepia
+.
+footer
+{
+background
+-
+color
+:
+#
+dedad4
+;
+}
+.
+dark
+.
+footer
+{
+background
+-
+color
+:
+#
+777
+;
+}
+.
+remove
+-
+button
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+global
+/
+skin
+/
+reader
+/
+RM
+-
+Delete
+-
+24x24
+.
+svg
+"
+)
+;
+margin
+:
+0
+auto
+;
+border
+:
+1px
+solid
+#
+c1c1c1
+;
+background
+-
+position
+:
+10px
+7px
+;
+padding
+-
+left
+:
+42px
+;
+padding
+-
+right
+:
+10px
+;
+border
+-
+radius
+:
+2px
+;
+box
+-
+shadow
+:
+0
+1px
+2px
+rgba
+(
+0
+0
+0
+0
+.
+1
+)
+;
+font
+-
+size
+:
+18px
 ;
 }
 /
@@ -2343,6 +2536,14 @@ print
 {
 .
 toolbar
+{
+display
+:
+none
+;
+}
+.
+footer
 {
 display
 :
