Bug 1147440 - Add a transition to the readinglist-addremove-button. ui-r=mmaslaney, r=jaws
UltraBlame original commit: 98bca71c7758a2461964557056f14031349091ce

--- a/browser/themes/shared/readinglist/readinglist.inc.css
+++ b/browser/themes/shared/readinglist/readinglist.inc.css
@@ -27,9 +27,13 @@ addremove
 -
 button
 {
-display
+opacity
 :
-none
+0
+;
+width
+:
+0px
 ;
 }
 #
@@ -80,6 +84,32 @@ rect
 14px
 0
 )
+;
+transition
+:
+width
+150ms
+ease
+-
+in
+-
+out
+opacity
+150ms
+ease
+-
+in
+-
+out
+150ms
+;
+opacity
+:
+1
+;
+width
+:
+20px
 ;
 }
 #
