--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -1268,7 +1268,7 @@ min
 -
 width
 :
-250px
+300px
 ;
 text
 -
@@ -1345,31 +1345,9 @@ popup
 >
 hr
 {
-width
+display
 :
-100
-%
-;
-height
-:
-0
-;
-border
-:
-0
-;
-border
--
-top
-:
-1px
-solid
-#
-b5b5b5
-;
-margin
-:
-0
+none
 ;
 }
 .
@@ -1613,35 +1591,8 @@ align
 center
 ;
 border
--
-left
-:
-1px
-solid
-#
-b5b5b5
-;
-border
--
-right
 :
 0
-;
-border
--
-top
-:
-0
-;
-border
--
-bottom
-:
-0
-;
-padding
-:
-10px
 ;
 }
 #
@@ -1672,6 +1623,24 @@ color
 :
 transparent
 ;
+border
+-
+left
+:
+1px
+solid
+#
+B5B5B5
+;
+border
+-
+bottom
+:
+1px
+solid
+#
+B5B5B5
+;
 }
 #
 color
@@ -1697,6 +1666,30 @@ size
 ;
 }
 #
+color
+-
+scheme
+-
+buttons
+>
+.
+dark
+-
+button
+{
+margin
+-
+top
+:
+-
+1px
+;
+height
+:
+61px
+;
+}
+#
 font
 -
 type
@@ -1712,18 +1705,6 @@ child
 font
 -
 size
--
-buttons
->
-button
-:
-first
--
-child
-#
-color
--
-scheme
 -
 buttons
 >
@@ -1759,7 +1740,78 @@ font
 -
 size
 :
-48px
+58px
+;
+height
+:
+100px
+;
+}
+/
+*
+Make
+the
+serif
+button
+content
+the
+same
+size
+as
+the
+sans
+-
+serif
+button
+content
+.
+*
+/
+#
+font
+-
+type
+-
+buttons
+>
+.
+serif
+-
+button
+{
+padding
+-
+top
+:
+1px
+;
+font
+-
+size
+:
+60px
+;
+}
+#
+font
+-
+size
+-
+buttons
+>
+button
+#
+color
+-
+scheme
+-
+buttons
+>
+button
+{
+height
+:
+60px
 ;
 }
 #
@@ -1829,6 +1881,39 @@ type
 buttons
 >
 button
+:
+active
+:
+hover
+#
+font
+-
+type
+-
+buttons
+>
+button
+.
+selected
+{
+border
+-
+bottom
+:
+1px
+solid
+#
+FC6420
+;
+}
+#
+font
+-
+type
+-
+buttons
+>
+button
 >
 div
 {
@@ -1842,6 +1927,13 @@ font
 size
 :
 12px
+;
+margin
+-
+top
+:
+-
+4px
 ;
 }
 .
@@ -1974,10 +2066,6 @@ transparent
 border
 :
 0
-;
-height
-:
-50px
 ;
 background
 -
