Bug 847287 patch 6 - Set mWinsInCascade for CSS Animations.  r=birtles
This is the main patch for the bug; it makes us use the mechanism added
in bug 1125455 to avoid sending animations that aren't currently
applying to the compositor.

Patch 7 is needed to make this code rerun in all the cases where we need
to rerun it, though.

UltraBlame original commit: de066f41c3776886288d112365b3fd57ffb882c0

--- a/layout/style/test/test_animations_omta.html
+++ b/layout/style/test/test_animations_omta.html
@@ -3565,11 +3565,7 @@ at
 "
 )
 ;
-/
-/
-Bug
-980769
-todo_is
+is
 (
 SpecialPowers
 .
@@ -3668,11 +3664,7 @@ at
 "
 )
 ;
-/
-/
-Bug
-980769
-todo_is
+is
 (
 SpecialPowers
 .
@@ -3730,11 +3722,7 @@ at
 "
 )
 ;
-/
-/
-Bug
-980769
-todo_is
+is
 (
 SpecialPowers
 .
@@ -3821,11 +3809,7 @@ at
 "
 )
 ;
-/
-/
-Bug
-980769
-todo_is
+is
 (
 SpecialPowers
 .
@@ -3921,11 +3905,7 @@ at
 "
 )
 ;
-/
-/
-Bug
-980769
-todo_is
+is
 (
 SpecialPowers
 .
@@ -4010,11 +3990,7 @@ at
 "
 )
 ;
-/
-/
-Bug
-980769
-todo_is
+is
 (
 SpecialPowers
 .
@@ -4296,20 +4272,7 @@ mode
 "
 )
 ;
-/
-/
-Bug
-980769
--
-We
-should
-get
-0
-.
-9
-but
-instead
-todo_is
+is
 (
 SpecialPowers
 .
@@ -15571,21 +15534,7 @@ waitForPaintsFlushed
 (
 )
 ;
-/
-/
-Bug
-847287
--
-off
-main
-thread
-animations
-don
-'
-t
-cascade
-correctly
-omta_todo_is
+omta_is
 (
 "
 transform
@@ -15597,7 +15546,7 @@ tx
 }
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 important
 author
@@ -17387,28 +17336,7 @@ waitForPaintsFlushed
 (
 )
 ;
-/
-/
-Bug
-980769
--
-off
-main
-thread
-animations
-incorrectly
-handle
-multiple
-/
-/
-animations
-of
-the
-same
-property
-and
-element
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -20989,7 +20917,7 @@ waitForPaintsFlushed
 (
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21017,7 +20945,7 @@ advance_clock
 750
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21045,7 +20973,7 @@ advance_clock
 1000
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21096,7 +21024,7 @@ waitForPaintsFlushed
 (
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21124,7 +21052,7 @@ advance_clock
 750
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21152,7 +21080,7 @@ advance_clock
 1000
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21209,7 +21137,7 @@ waitForPaintsFlushed
 (
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21235,7 +21163,7 @@ advance_clock
 400
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21294,6 +21222,43 @@ waitForPaints
 (
 )
 ;
+/
+/
+FIXME
+:
+Half
+of
+this
+test
+fails
+which
+means
+that
+omta_todo_is
+fails
+/
+/
+just
+as
+much
+as
+omta_is
+.
+(
+The
+value
+is
+wrong
+on
+both
+compositor
+and
+/
+/
+main
+threads
+.
+)
 omta_is
 (
 "
@@ -21427,7 +21392,7 @@ waitForPaintsFlushed
 (
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21511,6 +21476,43 @@ waitForPaints
 (
 )
 ;
+/
+/
+FIXME
+:
+Half
+of
+this
+test
+fails
+which
+means
+that
+omta_todo_is
+fails
+/
+/
+just
+as
+much
+as
+omta_is
+.
+(
+The
+value
+is
+wrong
+on
+both
+compositor
+and
+/
+/
+main
+threads
+.
+)
 omta_is
 (
 "
@@ -21534,6 +21536,43 @@ advance_clock
 75
 )
 ;
+/
+/
+FIXME
+:
+Half
+of
+this
+test
+fails
+which
+means
+that
+omta_todo_is
+fails
+/
+/
+just
+as
+much
+as
+omta_is
+.
+(
+The
+value
+is
+wrong
+on
+both
+compositor
+and
+/
+/
+main
+threads
+.
+)
 omta_is
 (
 "
@@ -21672,7 +21711,7 @@ waitForPaintsFlushed
 (
 )
 ;
-omta_todo_is
+omta_is
 (
 "
 opacity
@@ -21769,6 +21808,43 @@ waitForPaints
 (
 )
 ;
+/
+/
+FIXME
+:
+Half
+of
+this
+test
+fails
+which
+means
+that
+omta_todo_is
+fails
+/
+/
+just
+as
+much
+as
+omta_is
+.
+(
+The
+value
+is
+wrong
+on
+both
+compositor
+and
+/
+/
+main
+threads
+.
+)
 omta_is
 (
 "
@@ -21792,6 +21868,43 @@ advance_clock
 75
 )
 ;
+/
+/
+FIXME
+:
+Half
+of
+this
+test
+fails
+which
+means
+that
+omta_todo_is
+fails
+/
+/
+just
+as
+much
+as
+omta_is
+.
+(
+The
+value
+is
+wrong
+on
+both
+compositor
+and
+/
+/
+main
+threads
+.
+)
 omta_is
 (
 "
