Bug 847287 patch 12 - Check mWinsInCascade for all callers of GetAnimationOfProperty/HasAnimationOfProperty.  r=birtles
This patch (after stepping through the call graph) affects the following
places:
 * CommonAnimationManager::GetAnimationsForCompositor, which is used
   only by nsDisplayListBuilder::AddAnimationsAndTransitionsToLayer,
   which already checks the individual animations (so really no change)
 * AnimationPlayerCollection::CanThrottleAnimation
 * ActiveLayerTracker::IsStyleAnimated
 * nsLayoutUtils::HasAnimationsForCompositor
 * nsLayoutUtils::HasAnimations (which is used only to check whether we
   can make the 0-opacity optimization)
I believe it makes sense to change all of these locations (although in
the long term we want to throttle (or similar) more animations).

Without this patch, I believe we're forcing the creation of an opacity
layer because we think we have animations to send to it.

UltraBlame original commit: 54cf27ab09366005a03856866ee8d00b9a4bccee

--- a/layout/style/test/test_animations_omta.html
+++ b/layout/style/test/test_animations_omta.html
@@ -20927,7 +20927,7 @@ opacity
 5
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 opacity
 overriding
@@ -20955,7 +20955,7 @@ opacity
 5
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 opacity
 overriding
@@ -20983,7 +20983,7 @@ opacity
 5
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 opacity
 overriding
@@ -21034,7 +21034,7 @@ opacity
 5
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 opacity
 overriding
@@ -21062,7 +21062,7 @@ opacity
 5
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 opacity
 overriding
@@ -21090,7 +21090,7 @@ opacity
 5
 RunningOn
 .
-TodoMainThread
+MainThread
 "
 opacity
 overriding
