Bug 1147609 - Make Loop's standalone UI work with roomName as an unecrypted parameter or as an encrypted part of context. r=mikedeboer
UltraBlame original commit: c434080d10fec7e636b3fa0cb05e7a9fec9f33fb

--- a/browser/components/loop/standalone/content/index.html
+++ b/browser/components/loop/standalone/content/index.html
@@ -1322,6 +1322,31 @@ shared
 /
 js
 /
+crypto
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+shared
+/
+js
+/
 models
 .
 js
