Bug 1139026 - Use white background-color & inverted color for selected area. r=margaret
UltraBlame original commit: a4500e6defba79befdaa6ea0540390e2a4db2d01

--- a/toolkit/themes/windows/global/aboutReader.css
+++ b/toolkit/themes/windows/global/aboutReader.css
@@ -1003,6 +1003,45 @@ eeeeee
 ;
 }
 .
+dark
+*
+:
+:
+-
+moz
+-
+selection
+{
+background
+-
+color
+:
+#
+FFFFFF
+;
+color
+:
+#
+0095DD
+;
+}
+.
+dark
+a
+:
+:
+-
+moz
+-
+selection
+{
+color
+:
+#
+DD4800
+;
+}
+.
 content
 ul
 .
