Bug 1150006 - Get rid of "-aero" file name suffixes in toolkit/themes/windows/, part 1: CSS files. r=gijs
UltraBlame original commit: cba8cbff84d21482d00abef872fd6921369f32f4

--- a/toolkit/themes/windows/global/console/console.css
+++ b/toolkit/themes/windows/global/console/console.css
@@ -1449,3 +1449,55 @@ end
 5px
 ;
 }
+%
+ifdef
+XP_WIN
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+#
+ToolbarMode
+{
+-
+moz
+-
+appearance
+:
+-
+moz
+-
+win
+-
+browsertabbar
+-
+toolbox
+;
+}
+#
+ToolbarEval
+{
+-
+moz
+-
+appearance
+:
+toolbox
+;
+}
+}
+%
+endif
