--- a/toolkit/themes/windows/global/inContentUI.css
+++ b/toolkit/themes/windows/global/inContentUI.css
@@ -226,9 +226,6 @@ message
 box
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
 (
 -
@@ -606,8 +603,6 @@ png
 ;
 }
 }
-%
-endif
 /
 *
 Use
@@ -740,8 +735,20 @@ C3CEDF
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -786,8 +793,10 @@ radius
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 }
+%
+endif
 media
 (
 -
@@ -1386,8 +1395,6 @@ gif
 ;
 }
 }
-%
-endif
 colorpicker
 [
 type
