--- a/toolkit/themes/windows/global/popup.css
+++ b/toolkit/themes/windows/global/popup.css
@@ -458,8 +458,20 @@ margin
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -487,12 +499,6 @@ win7
 {
 %
 endif
-/
-*
-<
-Win8
-*
-/
 .
 panel
 -
@@ -507,7 +513,7 @@ radius
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 }
 %
 endif
