--- a/toolkit/themes/windows/global/textbox.css
+++ b/toolkit/themes/windows/global/textbox.css
@@ -415,6 +415,59 @@ font
 inherit
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+textbox
+html
+|
+*
+.
+textbox
+-
+input
+:
+:
+-
+moz
+-
+placeholder
+{
+font
+-
+style
+:
+italic
+;
+}
+}
+}
 .
 textbox
 -
