--- a/toolkit/themes/windows/global/toolbarbutton.css
+++ b/toolkit/themes/windows/global/toolbarbutton.css
@@ -753,6 +753,53 @@ shadow
 inherit
 ;
 }
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+toolbarbutton
+:
+-
+moz
+-
+lwtheme
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+{
+color
+:
+inherit
+;
+text
+-
+shadow
+:
+inherit
+;
+}
+}
 }
 media
 not
