--- a/toolkit/themes/windows/mozapps/extensions/extensions.css
+++ b/toolkit/themes/windows/mozapps/extensions/extensions.css
@@ -1141,8 +1141,20 @@ hidden
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -1240,7 +1252,7 @@ radius
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 }
 %
 endif
@@ -2063,8 +2075,20 @@ rgba
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -2108,7 +2132,7 @@ radius
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 }
 %
 endif
@@ -7202,8 +7226,20 @@ inset
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -7247,7 +7283,7 @@ radius
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
 }
 %
 endif
