--- a/toolkit/themes/windows/mozapps/extensions/selectAddons.css
+++ b/toolkit/themes/windows/mozapps/extensions/selectAddons.css
@@ -874,17 +874,6 @@ footer
 -
 label
 {
-%
-ifdef
-WINDOWS_AERO
-font
--
-style
-:
-italic
-;
-%
-endif
 color
 :
 GrayText
@@ -892,7 +881,40 @@ GrayText
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+.
+progress
+-
+label
+#
+footer
+-
+label
+{
+font
+-
+style
+:
+italic
+;
+}
 media
 (
 -
@@ -930,6 +952,7 @@ rgb
 )
 inset
 ;
+}
 }
 }
 %
