--- a/toolkit/themes/windows/global/autocomplete.css
+++ b/toolkit/themes/windows/global/autocomplete.css
@@ -780,7 +780,24 @@ HighlightText
 }
 %
 ifdef
-WINDOWS_AERO
+XP_WIN
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 media
 (
 -
@@ -1005,6 +1022,7 @@ offset
 -
 2px
 ;
+}
 }
 }
 %
@@ -1549,9 +1567,23 @@ default
 theme
 )
 {
-%
-ifdef
-WINDOWS_AERO
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 html
 |
 span
@@ -1596,8 +1628,21 @@ rgba
 )
 ;
 }
-%
-else
+}
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 .
 ac
 -
@@ -1665,8 +1710,7 @@ rgba
 )
 ;
 }
-%
-endif
+}
 }
 .
 ac
