--- a/toolkit/themes/windows/global/menu.css
+++ b/toolkit/themes/windows/global/menu.css
@@ -1018,6 +1018,96 @@ shadow
 none
 ;
 }
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+menubar
+>
+menu
+:
+-
+moz
+-
+lwtheme
+{
+-
+moz
+-
+appearance
+:
+menuitem
+;
+}
+menubar
+>
+menu
+:
+-
+moz
+-
+lwtheme
+[
+_moz
+-
+menuactive
+=
+"
+true
+"
+]
+:
+not
+(
+[
+disabled
+=
+"
+true
+"
+]
+)
+{
+color
+:
+inherit
+!
+important
+;
+text
+-
+shadow
+:
+inherit
+;
+}
+}
+}
 %
 ifdef
 XP_WIN
