Bug 1144163 - Add a rulers highlighter; added gcli command and button. r=pbrosset
UltraBlame original commit: bff8313febf0c217c34436560f54f9721161bb0e

--- a/browser/themes/shared/devtools/toolbars.inc.css
+++ b/browser/themes/shared/devtools/toolbars.inc.css
@@ -4995,6 +4995,41 @@ png
 )
 ;
 }
+#
+command
+-
+button
+-
+rulers
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+rulers
+.
+png
+"
+)
+;
+}
 media
 (
 min
@@ -5321,6 +5356,42 @@ devtools
 command
 -
 eyedropper
+2x
+.
+png
+"
+)
+;
+}
+#
+command
+-
+button
+-
+rulers
+>
+image
+{
+background
+-
+image
+:
+url
+(
+"
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+devtools
+/
+command
+-
+rulers
 2x
 .
 png
