Bug 1150006 - Get rid of "-aero" file name suffixes, part 4: replace some Windows icons with Gtk stock icons on Linux. r=gijs
UltraBlame original commit: dca65796f8ab750f87ea09ac9f9b9c6d01346365

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -9391,21 +9391,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-question
+gtk
 -
+dialog
+-
+question
+?
+size
+=
 16
-.
-png
 "
 )
 ;
@@ -10696,21 +10698,23 @@ image
 :
 url
 (
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-information
+gtk
 -
+dialog
+-
+info
+?
+size
+=
 16
-.
-png
 )
 ;
 }
@@ -10842,21 +10846,23 @@ image
 :
 url
 (
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-question
+gtk
 -
+dialog
+-
+question
+?
+size
+=
 16
-.
-png
 )
 ;
 }
