--- a/browser/themes/linux/downloads/downloads.css
+++ b/browser/themes/linux/downloads/downloads.css
@@ -582,19 +582,23 @@ image
 url
 (
 "
-chrome
+moz
+-
+icon
 :
 /
 /
-global
+stock
 /
-skin
-/
-icons
-/
-Error
-.
-png
+gtk
+-
+dialog
+-
+error
+?
+size
+=
+dialog
 "
 )
 ;
