Backed out changeset dca65796f8ab for XPCShell failures
UltraBlame original commit: 71338877d1dc42986339854300222cbf0bd4deac

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -9391,23 +9391,21 @@ image
 url
 (
 "
-moz
--
-icon
+chrome
 :
 /
 /
-stock
+global
 /
-gtk
--
-dialog
--
+skin
+/
+icons
+/
 question
-?
-size
-=
+-
 16
+.
+png
 "
 )
 ;
@@ -10698,23 +10696,21 @@ image
 :
 url
 (
-moz
--
-icon
+chrome
 :
 /
 /
-stock
+global
 /
-gtk
+skin
+/
+icons
+/
+information
 -
-dialog
--
-info
-?
-size
-=
 16
+.
+png
 )
 ;
 }
@@ -10846,23 +10842,21 @@ image
 :
 url
 (
-moz
--
-icon
+chrome
 :
 /
 /
-stock
+global
 /
-gtk
--
-dialog
--
+skin
+/
+icons
+/
 question
-?
-size
-=
+-
 16
+.
+png
 )
 ;
 }
