--- a/browser/themes/linux/downloads/allDownloadsViewOverlay.css
+++ b/browser/themes/linux/downloads/allDownloadsViewOverlay.css
@@ -151,23 +151,19 @@ image
 url
 (
 "
-moz
--
-icon
+chrome
 :
 /
 /
-stock
+global
 /
-gtk
--
-dialog
--
-error
-?
-size
-=
-dialog
+skin
+/
+icons
+/
+Error
+.
+png
 "
 )
 ;
