--- a/browser/themes/shared/devtools/animationinspector.css
+++ b/browser/themes/shared/devtools/animationinspector.css
@@ -522,6 +522,32 @@ png
 }
 /
 *
+Disabled
+playerWidget
+when
+the
+animation
+has
+ended
+*
+/
+.
+finished
+{
+pointer
+-
+events
+:
+none
+;
+opacity
+:
+.
+5
+;
+}
+/
+*
 Animation
 title
 gutter
