Bug 947242 - DevTools themes - switch to new theme colors;r=jsantell
UltraBlame original commit: 05ed7dd4126b87146c116300335925d768a70ee3

--- a/browser/themes/shared/devtools/light-theme.css
+++ b/browser/themes/shared/devtools/light-theme.css
@@ -76,29 +76,31 @@ MPL
 /
 /
 *
-According
-to
+Colors
+are
+taken
+from
 :
 *
 https
 :
 /
 /
-bugzilla
+developer
 .
 mozilla
 .
 org
 /
-show_bug
-.
-cgi
-?
-id
-=
-715472
-#
-c17
+en
+-
+US
+/
+docs
+/
+Tools
+/
+DevToolsColors
 *
 /
 :
@@ -178,17 +180,6 @@ theme
 -
 selection
 -
-color
-:
-#
-f5f7fa
-;
--
--
-theme
--
-selection
--
 background
 -
 semitransparent
@@ -201,6 +192,17 @@ rgba
 .
 23
 )
+;
+-
+-
+theme
+-
+selection
+-
+color
+:
+#
+f5f7fa
 ;
 -
 -
@@ -219,14 +221,8 @@ theme
 -
 comment
 :
-hsl
-(
-90
-2
-%
-46
-%
-)
+#
+757873
 ;
 -
 -
@@ -293,14 +289,8 @@ highlight
 -
 green
 :
-hsl
-(
-72
-100
-%
-27
-%
-)
+#
+2cbb0f
 ;
 -
 -
@@ -310,14 +300,8 @@ highlight
 -
 blue
 :
-hsl
-(
-208
-56
-%
-40
-%
-)
+#
+0088cc
 ;
 -
 -
@@ -327,14 +311,8 @@ highlight
 -
 bluegrey
 :
-hsl
-(
-208
-81
-%
-21
-%
-)
+#
+5f88b0
 ;
 -
 -
@@ -356,7 +334,7 @@ highlight
 lightorange
 :
 #
-a18650
+d97e00
 ;
 -
 -
@@ -366,14 +344,8 @@ highlight
 -
 orange
 :
-hsl
-(
-24
-85
-%
-39
-%
-)
+#
+f13c00
 ;
 -
 -
@@ -384,7 +356,7 @@ highlight
 red
 :
 #
-bf5656
+ed2655
 ;
 -
 -
