--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -76,29 +76,31 @@ MPL
 /
 /
 *
-According
-to
+Colors
+are
+taken
+from
 :
 *
 https
 :
 /
 /
-bugzilla
+developer
 .
 mozilla
 .
 org
 /
-show_bug
-.
-cgi
-?
-id
-=
-715472
-#
-c17
+en
+-
+US
+/
+docs
+/
+Tools
+/
+DevToolsColors
 *
 /
 :
@@ -178,17 +180,6 @@ theme
 -
 selection
 -
-color
-:
-#
-f5f7fa
-;
--
--
-theme
--
-selection
--
 background
 -
 semitransparent
@@ -201,6 +192,17 @@ rgba
 .
 5
 )
+;
+-
+-
+theme
+-
+selection
+-
+color
+:
+#
+f5f7fa
 ;
 -
 -
@@ -219,7 +221,7 @@ theme
 comment
 :
 #
-5c6773
+757873
 ;
 -
 -
@@ -230,7 +232,7 @@ body
 color
 :
 #
-a9bacb
+8fa1b2
 ;
 -
 -
@@ -276,7 +278,7 @@ content
 color3
 :
 #
-667380
+5f7387
 ;
 -
 -
@@ -287,7 +289,7 @@ highlight
 green
 :
 #
-5c9966
+70bf53
 ;
 -
 -
@@ -298,7 +300,7 @@ highlight
 blue
 :
 #
-3689b2
+46afe3
 ;
 -
 -
@@ -320,7 +322,7 @@ highlight
 purple
 :
 #
-6270b2
+6b7abb
 ;
 -
 -
@@ -331,7 +333,7 @@ highlight
 lightorange
 :
 #
-a18650
+d99b28
 ;
 -
 -
@@ -342,7 +344,7 @@ highlight
 orange
 :
 #
-b26b47
+d96629
 ;
 -
 -
@@ -353,7 +355,7 @@ highlight
 red
 :
 #
-bf5656
+eb5368
 ;
 -
 -
@@ -364,7 +366,7 @@ highlight
 pink
 :
 #
-a673bf
+df80ff
 ;
 }
 .
