Bug 1148855 - Set overflow:hidden on scrollbar tracks so that layerization knows that the scrollbar thumb won't leave the scrollbar. r=roc
UltraBlame original commit: b50e39d915f3e3c4ff917f1a8de54e7212c1f491

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -7216,6 +7216,53 @@ group
 *
 *
 *
+scrollbar
+*
+*
+*
+*
+*
+*
+*
+*
+/
+slider
+{
+/
+*
+This
+is
+a
+hint
+to
+layerization
+that
+the
+scrollbar
+thumb
+can
+never
+leave
+the
+scrollbar
+track
+.
+*
+/
+overflow
+:
+hidden
+;
+}
+/
+*
+*
+*
+*
+*
+*
+*
+*
 scrollbox
 *
 *
