Bug 1138630 - Switch the desktop update badge to an SVG image. r=Gijs
UltraBlame original commit: 335575e02706292a601d1d4342f4870db3094cb8

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -1133,6 +1133,60 @@ calc
 0
 ;
 }
+#
+PanelUI
+-
+menu
+-
+button
+[
+update
+-
+status
+=
+"
+succeeded
+"
+]
+.
+toolbarbutton
+-
+badge
+:
+:
+after
+{
+content
+:
+url
+(
+chrome
+:
+/
+/
+browser
+/
+skin
+/
+update
+-
+badge
+.
+svg
+)
+;
+background
+-
+color
+:
+#
+74BF43
+;
+height
+:
+10px
+;
+}
 .
 panel
 -
