Bug 1147281 - Shared browser notification icon CSS. r=MattN
UltraBlame original commit: 053673640c0d12cd45aef11c47ad3094dee8088e

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -31310,6 +31310,20 @@ top
 5px
 ;
 }
+%
+include
+.
+.
+/
+shared
+/
+notification
+-
+icons
+.
+inc
+.
+css
 #
 notification
 -
@@ -31317,31 +31331,6 @@ popup
 -
 box
 {
-position
-:
-relative
-;
-background
--
-color
-:
-#
-fff
-;
-background
--
-clip
-:
-padding
--
-box
-;
-padding
--
-left
-:
-3px
-;
 border
 -
 radius
@@ -31350,59 +31339,6 @@ radius
 0
 0
 2px
-;
-border
--
-width
-:
-0
-8px
-0
-0
-;
-border
--
-style
-:
-solid
-;
-border
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-urlbar
--
-arrow
-.
-png
-"
-)
-0
-8
-0
-0
-fill
-;
--
-moz
--
-margin
--
-end
-:
--
-8px
 ;
 }
 media
@@ -31451,96 +31387,6 @@ png
 fill
 ;
 }
-}
-conditionalForwardWithUrlbar
->
-#
-forward
--
-button
-[
-disabled
-]
-+
-#
-urlbar
->
-#
-notification
--
-popup
--
-box
-{
-padding
--
-left
-:
-7px
-;
-}
-#
-notification
--
-popup
--
-box
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-.
-notification
--
-anchor
--
-icon
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-{
-transform
-:
-scaleX
-(
--
-1
-)
-;
-}
-.
-notification
--
-anchor
--
-icon
-{
-width
-:
-16px
-;
-height
-:
-16px
-;
-margin
-:
-0
-2px
-;
 }
 .
 notification
@@ -31598,45 +31444,6 @@ height
 16px
 ;
 }
-.
-default
--
-notification
--
-icon
-#
-default
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-information
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -31686,89 +31493,6 @@ png
 ;
 }
 }
-.
-identity
--
-notification
--
-icon
-#
-identity
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-profile
-/
-profileicon
-.
-png
-)
-;
-}
-/
-*
-XXX
-:
-need
-HiDPI
-version
-*
-/
-.
-geo
--
-notification
--
-icon
-#
-geo
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Geolocation
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -31816,45 +31540,6 @@ png
 )
 ;
 }
-}
-.
-indexedDB
--
-notification
--
-icon
-#
-indexedDB
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-question
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -31905,39 +31590,6 @@ png
 ;
 }
 }
-#
-addons
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -31978,39 +31630,6 @@ png
 )
 ;
 }
-}
-#
-password
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-passwordmgr
-/
-key
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -32055,45 +31674,6 @@ png
 )
 ;
 }
-}
-.
-webapps
--
-notification
--
-icon
-#
-webapps
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-webapps
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -32144,180 +31724,6 @@ png
 )
 ;
 }
-}
-#
-plugins
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-notification
--
-pluginNormal
-.
-png
-)
-;
-}
-#
-plugins
--
-notification
--
-icon
-.
-plugin
--
-hidden
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-notification
--
-pluginAlert
-.
-png
-)
-;
-}
-#
-plugins
--
-notification
--
-icon
-.
-plugin
--
-blocked
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-notification
--
-pluginBlocked
-.
-png
-)
-;
-}
-#
-plugins
--
-notification
--
-icon
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-16px
-16px
-0
-)
-;
-}
-#
-plugins
--
-notification
--
-icon
-:
-hover
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-32px
-16px
-16px
-)
-;
-}
-#
-plugins
--
-notification
--
-icon
-:
-active
-{
--
-moz
--
-image
--
-region
-:
-rect
-(
-0
-48px
-16px
-32px
-)
-;
 }
 media
 (
@@ -32506,130 +31912,6 @@ rect
 ;
 }
 }
-#
-notification
--
-popup
--
-box
-[
-hidden
-]
-{
-/
-*
-Override
-display
-:
-none
-to
-make
-the
-pluginBlockedNotification
-animation
-work
-when
-showing
-the
-notification
-repeatedly
-.
-*
-/
-display
-:
--
-moz
--
-box
-;
-visibility
-:
-collapse
-;
-}
-#
-plugins
--
-notification
--
-icon
-.
-plugin
--
-blocked
-[
-showing
-]
-{
-animation
-:
-pluginBlockedNotification
-500ms
-ease
-0s
-5
-alternate
-both
-;
-}
-keyframes
-pluginBlockedNotification
-{
-from
-{
-opacity
-:
-0
-;
-}
-to
-{
-opacity
-:
-1
-;
-}
-}
-#
-bad
--
-content
--
-blocked
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-bad
--
-content
--
-blocked
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -32680,45 +31962,6 @@ png
 ;
 }
 }
-#
-bad
--
-content
--
-unblocked
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-bad
--
-content
--
-unblocked
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -32768,49 +32011,6 @@ png
 )
 ;
 }
-}
-.
-webRTC
--
-shareDevices
--
-notification
--
-icon
-#
-webRTC
--
-shareDevices
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-shareDevice
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -32866,49 +32066,6 @@ png
 ;
 }
 }
-.
-webRTC
--
-sharingDevices
--
-notification
--
-icon
-#
-webRTC
--
-sharingDevices
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-sharingDevice
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -32963,49 +32120,6 @@ png
 ;
 }
 }
-.
-webRTC
--
-shareMicrophone
--
-notification
--
-icon
-#
-webRTC
--
-shareMicrophone
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-shareMicrophone
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -33059,49 +32173,6 @@ png
 )
 ;
 }
-}
-.
-webRTC
--
-sharingMicrophone
--
-notification
--
-icon
-#
-webRTC
--
-sharingMicrophone
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-sharingMicrophone
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -33157,49 +32228,6 @@ png
 ;
 }
 }
-.
-webRTC
--
-shareScreen
--
-notification
--
-icon
-#
-webRTC
--
-shareScreen
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-shareScreen
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -33254,49 +32282,6 @@ png
 ;
 }
 }
-.
-webRTC
--
-sharingScreen
--
-notification
--
-icon
-#
-webRTC
--
-sharingScreen
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-sharingScreen
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -33350,47 +32335,6 @@ png
 )
 ;
 }
-}
-.
-web
--
-notifications
--
-notification
--
-icon
-#
-web
--
-notifications
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-notification
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -33443,43 +32387,6 @@ png
 )
 ;
 }
-}
-.
-pointerLock
--
-notification
--
-icon
-#
-pointerLock
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-pointerLock
--
-16
-.
-png
-)
-;
 }
 media
 (
@@ -33534,58 +32441,6 @@ png
 Translation
 *
 /
-.
-translate
--
-notification
--
-icon
-#
-translate
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-translation
--
-16
-.
-png
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-16px
-16px
-0px
-)
-;
-}
 media
 (
 min
@@ -33648,58 +32503,6 @@ rect
 )
 ;
 }
-}
-.
-translated
--
-notification
--
-icon
-#
-translated
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-translation
--
-16
-.
-png
-)
-;
--
-moz
--
-image
--
-region
-:
-rect
-(
-0px
-32px
-16px
-16px
-)
-;
 }
 media
 (
@@ -35206,69 +34009,6 @@ png
 ;
 }
 }
-.
-popup
--
-notification
--
-icon
-{
-width
-:
-64px
-;
-height
-:
-64px
-;
--
-moz
--
-margin
--
-end
-:
-10px
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-geolocation
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-Geolocation
--
-64
-.
-png
-)
-;
-}
 media
 (
 min
@@ -35317,46 +34057,6 @@ png
 )
 ;
 }
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-web
--
-notifications
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-notification
--
-64
-.
-png
-)
-;
 }
 media
 (
@@ -35408,137 +34108,6 @@ png
 )
 ;
 }
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-xpinstall
--
-disabled
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-progress
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-blocked
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-failed
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-confirmation
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-addon
--
-install
--
-complete
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-extensions
-/
-extensionGeneric
-.
-png
-)
-;
-width
-:
-32px
-;
-height
-:
-32px
-;
 }
 .
 popup
@@ -35671,274 +34240,6 @@ margin
 *
 /
 }
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-click
--
-to
--
-play
--
-plugins
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-plugins
-/
-pluginBlocked
--
-64
-.
-png
-)
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-indexedDB
--
-permissions
--
-prompt
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-*
-=
-"
-offline
--
-app
--
-requested
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-offline
--
-app
--
-usage
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-question
--
-64
-.
-png
-)
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-password
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-mozapps
-/
-skin
-/
-passwordmgr
-/
-key
--
-64
-.
-png
-)
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webapps
--
-install
--
-progress
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webapps
--
-install
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-webapps
--
-64
-.
-png
-)
-;
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-bad
--
-content
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-bad
--
-content
--
-blocked
--
-64
-.
-png
-)
-;
-}
 media
 (
 min
@@ -35993,71 +34294,6 @@ png
 )
 ;
 }
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-bad
--
-content
-"
-]
-[
-mixedblockdisabled
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-bad
--
-content
-"
-]
-[
-trackingblockdisabled
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-bad
--
-content
--
-unblocked
--
-64
-.
-png
-)
-;
 }
 media
 (
@@ -36134,44 +34370,6 @@ png
 )
 ;
 }
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-pointerLock
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-pointerLock
--
-64
-.
-png
-)
-;
 }
 media
 (
@@ -36232,63 +34430,6 @@ margin
 0px
 ;
 }
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webRTC
--
-sharingDevices
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webRTC
--
-shareDevices
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-shareDevice
--
-64
-.
-png
-)
-;
-}
 media
 (
 min
@@ -36357,63 +34498,6 @@ png
 ;
 }
 }
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webRTC
--
-sharingMicrophone
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webRTC
--
-shareMicrophone
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-shareMicrophone
--
-64
-.
-png
-)
-;
-}
 media
 (
 min
@@ -36481,63 +34565,6 @@ png
 )
 ;
 }
-}
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webRTC
--
-sharingScreen
-"
-]
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-webRTC
--
-shareScreen
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-webRTC
--
-shareScreen
--
-64
-.
-png
-)
-;
 }
 media
 (
@@ -37918,79 +35945,6 @@ radius
 1px
 ;
 }
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-servicesInstall
-"
-]
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-social
-/
-services
--
-64
-.
-png
-)
-;
-}
-#
-servicesInstall
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-social
-/
-services
--
-16
-.
-png
-)
-;
-}
 media
 (
 min
@@ -38797,172 +36751,6 @@ radius
 :
 toolbarbuttonCornerRadius
 ;
-}
-/
-*
-EME
-notifications
-*
-/
-.
-popup
--
-notification
--
-icon
-[
-popupid
-=
-"
-drmContentPlaying
-"
-]
-#
-eme
--
-notification
--
-icon
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-drm
--
-icon
-.
-svg
-#
-chains
-"
-)
-;
-}
-#
-eme
--
-notification
--
-icon
-:
-hover
-:
-active
-{
-list
--
-style
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-browser
-/
-skin
-/
-drm
--
-icon
-.
-svg
-#
-chains
--
-pressed
-"
-)
-;
-}
-#
-eme
--
-notification
--
-icon
-[
-firstplay
-=
-true
-]
-{
-animation
-:
-emeTeachingMoment
-0
-.
-2s
-linear
-0s
-5
-normal
-;
-}
-keyframes
-emeTeachingMoment
-{
-0
-%
-{
-transform
-:
-translateX
-(
-0
-)
-;
-}
-25
-%
-{
-transform
-:
-translateX
-(
-3px
-)
-}
-75
-%
-{
-transform
-:
-translateX
-(
--
-3px
-)
-}
-100
-%
-{
-transform
-:
-translateX
-(
-0
-)
-;
-}
 }
 /
 *
