Bug 1150843 - Get rid of *-aero.css overrides except for browser-aero.css. r=gijs
UltraBlame original commit: 7c0d9592b14c95ae6ea2b4c0e85710d5abfc4658

--- a/browser/themes/windows/customizableui/panelUIOverlay.css
+++ b/browser/themes/windows/customizableui/panelUIOverlay.css
@@ -979,9 +979,6 @@ scaleX
 )
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 /
 *
 Win8
@@ -990,6 +987,23 @@ beyond
 .
 *
 /
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 media
 not
 all
@@ -1100,8 +1114,7 @@ radius
 }
 }
 }
-%
-endif
+}
 media
 not
 all
