--- a/browser/themes/windows/downloads/downloads.css
+++ b/browser/themes/windows/downloads/downloads.css
@@ -163,10 +163,19 @@ cursor
 pointer
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -192,8 +201,6 @@ windows
 win7
 )
 {
-%
-endif
 #
 downloadsHistory
 {
@@ -205,12 +212,7 @@ moz
 nativehyperlinktext
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
-%
-endif
 #
 downloadsPanel
 [
@@ -375,10 +377,19 @@ hsla
 inset
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -404,8 +415,6 @@ windows
 win7
 )
 {
-%
-endif
 media
 (
 -
@@ -461,9 +470,6 @@ hover
 :
 active
 {
-%
-ifdef
-WINDOWS_AERO
 background
 -
 color
@@ -471,25 +477,6 @@ color
 #
 f1f5fb
 ;
-%
-else
-background
--
-color
-:
-hsla
-(
-216
-45
-%
-88
-%
-.
-98
-)
-;
-%
-endif
 box
 -
 shadow
@@ -506,13 +493,52 @@ rgb
 inset
 ;
 }
-}
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+#
+downloadsFooter
+#
+downloadsFooter
+:
+hover
+#
+downloadsFooter
+:
+hover
+:
+active
+{
+background
+-
+color
+:
+hsla
+(
+216
+45
 %
-ifdef
-WINDOWS_AERO
-}
+88
 %
-endif
+.
+98
+)
+;
+}
+}
+}
+}
 /
 *
 *
@@ -710,6 +736,86 @@ padding
 :
 8px
 ;
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+vista
+)
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+win7
+)
+{
+richlistitem
+[
+type
+=
+"
+download
+"
+]
+{
+border
+:
+1px
+solid
+transparent
+;
+border
+-
+bottom
+:
+1px
+solid
+hsl
+(
+213
+40
+%
+90
+%
+)
+;
+}
 }
 richlistitem
 [
@@ -1355,10 +1461,19 @@ hsla
 inset
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
 (
 -
 moz
@@ -1384,8 +1499,6 @@ windows
 win7
 )
 {
-%
-endif
 #
 downloadsPanel
 :
@@ -1528,12 +1641,168 @@ shadow
 none
 ;
 }
-%
-ifdef
-WINDOWS_AERO
 }
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+vista
+)
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+win7
+)
+{
+#
+downloadsPanel
+:
+not
+(
+[
+keyfocus
+]
+)
+>
+#
+downloadsListBox
+>
+richlistitem
+[
+type
+=
+"
+download
+"
+]
+[
+state
+=
+"
+1
+"
+]
+[
+exists
+]
+:
+hover
+{
+border
+:
+1px
+solid
+hsl
+(
+213
+45
 %
-endif
+65
+%
+)
+;
+box
+-
+shadow
+:
+0
+0
+0
+1px
+hsla
+(
+0
+0
+%
+100
+%
+.
+5
+)
+inset
+0
+1px
+0
+hsla
+(
+0
+0
+%
+100
+%
+.
+3
+)
+inset
+;
+background
+-
+image
+:
+linear
+-
+gradient
+(
+hsl
+(
+212
+86
+%
+92
+%
+)
+hsl
+(
+212
+91
+%
+86
+%
+)
+)
+;
+color
+:
+black
+;
+}
+}
 /
 *
 *
@@ -1857,9 +2126,20 @@ rect
 )
 ;
 }
-%
-ifndef
-WINDOWS_AERO
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 #
 downloadsPanel
 [
@@ -2180,8 +2460,7 @@ rect
 )
 ;
 }
-%
-endif
+}
 .
 downloadButton
 .
