--- a/browser/themes/windows/downloads/allDownloadsViewOverlay.css
+++ b/browser/themes/windows/downloads/allDownloadsViewOverlay.css
@@ -98,16 +98,34 @@ height
 :
 6em
 ;
-%
-ifndef
-WINDOWS_AERO
+}
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+#
+downloadsRichListBox
+>
+richlistitem
+.
+download
+{
 padding
 :
 5px
 8px
 ;
-%
-endif
+}
 }
 .
 downloadTypeIcon
@@ -121,20 +139,6 @@ end
 :
 8px
 ;
-%
-ifdef
-WINDOWS_AERO
--
-moz
--
-margin
--
-start
-:
-8px
-;
-%
-endif
 /
 *
 explicitly
@@ -160,6 +164,37 @@ width
 :
 32px
 ;
+}
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+.
+downloadTypeIcon
+{
+-
+moz
+-
+margin
+-
+start
+:
+8px
+;
+}
 }
 .
 blockedIcon
@@ -655,9 +690,20 @@ rect
 )
 ;
 }
-%
-ifndef
-WINDOWS_AERO
+media
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
 richlistitem
 .
 download
@@ -1078,5 +1124,279 @@ rect
 )
 ;
 }
-%
-endif
+}
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+/
+*
+-
+moz
+-
+appearance
+:
+menuitem
+is
+almost
+right
+but
+the
+hover
+effect
+is
+not
+transparent
+and
+is
+lighter
+than
+desired
+.
+Copied
+from
+the
+autocomplete
+richlistbox
+styling
+in
+toolkit
+/
+themes
+/
+windows
+/
+global
+/
+autocomplete
+.
+css
+This
+styling
+should
+be
+kept
+in
+sync
+with
+the
+style
+from
+the
+above
+file
+.
+*
+/
+#
+downloadsRichListBox
+>
+richlistitem
+.
+download
+[
+selected
+]
+{
+color
+:
+inherit
+;
+background
+-
+color
+:
+transparent
+;
+/
+*
+four
+gradients
+for
+the
+bevel
+highlights
+on
+each
+edge
+one
+for
+blue
+background
+*
+/
+background
+-
+image
+:
+linear
+-
+gradient
+(
+to
+bottom
+rgba
+(
+255
+255
+255
+0
+.
+9
+)
+3px
+transparent
+3px
+)
+linear
+-
+gradient
+(
+to
+right
+rgba
+(
+255
+255
+255
+0
+.
+5
+)
+3px
+transparent
+3px
+)
+linear
+-
+gradient
+(
+to
+left
+rgba
+(
+255
+255
+255
+0
+.
+5
+)
+3px
+transparent
+3px
+)
+linear
+-
+gradient
+(
+to
+top
+rgba
+(
+255
+255
+255
+0
+.
+4
+)
+3px
+transparent
+3px
+)
+linear
+-
+gradient
+(
+to
+bottom
+rgba
+(
+163
+196
+247
+0
+.
+3
+)
+rgba
+(
+122
+180
+246
+0
+.
+3
+)
+)
+;
+background
+-
+clip
+:
+content
+-
+box
+;
+border
+-
+radius
+:
+6px
+;
+outline
+:
+1px
+solid
+rgb
+(
+124
+163
+206
+)
+;
+-
+moz
+-
+outline
+-
+radius
+:
+3px
+;
+outline
+-
+offset
+:
+-
+2px
+;
+}
+}
+}
