--- a/browser/themes/windows/places/organizer.css
+++ b/browser/themes/windows/places/organizer.css
@@ -56,6 +56,17 @@ MPL
 .
 *
 /
+%
+include
+.
+.
+/
+windowsShared
+.
+inc
+%
+filter
+substitution
 /
 *
 Toolbar
@@ -130,9 +141,6 @@ png
 )
 ;
 }
-%
-ifndef
-WINDOWS_AERO
 media
 (
 -
@@ -183,8 +191,6 @@ png
 ;
 }
 }
-%
-endif
 #
 back
 -
@@ -849,4 +855,336 @@ end
 :
 9px
 ;
+}
+media
+not
+all
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+xp
+)
+{
+#
+placesView
+{
+border
+-
+top
+:
+none
+;
+}
+media
+not
+all
+and
+(
+-
+moz
+-
+windows
+-
+classic
+)
+{
+#
+placesToolbox
+{
+-
+moz
+-
+appearance
+:
+none
+;
+background
+-
+color
+:
+transparent
+;
+}
+#
+placesToolbar
+{
+-
+moz
+-
+appearance
+:
+none
+;
+background
+-
+color
+:
+-
+moz
+-
+Dialog
+;
+color
+:
+-
+moz
+-
+dialogText
+;
+}
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+{
+#
+placesView
+>
+splitter
+{
+border
+:
+0
+;
+-
+moz
+-
+border
+-
+end
+:
+1px
+solid
+#
+A9B7C9
+;
+min
+-
+width
+:
+0
+;
+width
+:
+3px
+;
+background
+-
+color
+:
+transparent
+;
+-
+moz
+-
+margin
+-
+start
+:
+-
+3px
+;
+position
+:
+relative
+;
+}
+}
+}
+media
+(
+-
+moz
+-
+windows
+-
+compositor
+)
+{
+#
+placesToolbox
+{
+border
+-
+top
+:
+none
+;
+}
+#
+placesToolbar
+{
+background
+-
+image
+:
+linear
+-
+gradient
+(
+toolbarHighlight
+transparent
+)
+;
+}
+}
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+vista
+)
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+)
+and
+(
+-
+moz
+-
+os
+-
+version
+:
+windows
+-
+win7
+)
+{
+#
+placesView
+#
+infoPane
+#
+placesList
+#
+placeContent
+{
+background
+-
+color
+:
+#
+EEF3FA
+;
+}
+#
+placesToolbar
+{
+background
+-
+color
+:
+customToolbarColor
+;
+color
+:
+black
+;
+}
+#
+detailsDeck
+{
+border
+-
+top
+-
+color
+:
+#
+A9B7C9
+;
+}
+#
+searchFilter
+{
+-
+moz
+-
+appearance
+:
+none
+;
+padding
+:
+2px
+;
+-
+moz
+-
+padding
+-
+start
+:
+4px
+;
+background
+-
+clip
+:
+padding
+-
+box
+;
+border
+:
+1px
+solid
+rgba
+(
+0
+0
+0
+.
+32
+)
+;
+border
+-
+radius
+:
+2px
+;
+}
 }
