Bug 1144615 - 2 - Adds a playbackRate selector widget to the animation panel; r=vporof
This adds a playbackRate <select> dropdown next to the list of other playback
control buttons (play/pause, rw, fwd).
The list shows presets, unless the current rate isn't part of these presets
in which case it also shows this rate in the list.
The widget was created as a reusable component with a simple API, like the
PlayerMetaDataHeader.

UltraBlame original commit: a87115bb8c7a9f367390599c8bb6cb18c313a5f6

--- a/browser/themes/shared/devtools/animationinspector.css
+++ b/browser/themes/shared/devtools/animationinspector.css
@@ -943,6 +943,42 @@ png
 ;
 }
 }
+.
+timeline
+.
+rate
+{
+-
+moz
+-
+appearance
+:
+none
+;
+text
+-
+align
+:
+center
+;
+border
+-
+right
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+splitter
+-
+color
+)
+;
+}
 /
 *
 Slider
